# PDF-GPT

./: .gitignore  PDFGPT.py  README.md  pyproject.toml
Fun example problems!/: readme.txt
Fun example problems!/programs/: analyzer.ts  cli_tool.kt  data_processor.rs  file_sorter.cpp  inventory_system.java  log_analyzer.js  math_tool.odin  network.swift  program.hs  query.sql  report.php  script.sh  task_manager.py  user_manager.cs
src/: IGNORELIST.csv  PDFGPT.py
src/pdfgpt/: IGNORELIST.csv  PDFGPT.py
src/pdfgpt_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
