[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgpt"
version = "0.1.0"
description = "Compiles all of your readable code into a singular PDF to make sharing your program with an LLM as quick as possible."
readme = "README.md"
authors = [
    { name = "Samuel Saylor", email = "samuelsaylor2025@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pdfgpt = "pdfgpt.main:PDFGPT"

[project.urls]
Homepage = "https://github.com/SamuelSaylor/PDF-GPT"