[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgpt-llm"
version = "0.1.0"
description = "Compiles all readable files into a single PDF for easy sharing with LLMs."
readme = "README.md"
authors = [
    { name = "Samuel Saylor", email = "samuelsaylor2025@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = ["pdf", "automation", "llm", "code-export"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "fpdf>=1.7.2",
    "sympy>=1.12"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pdfgpt = "pdfgpt.PDFGPT:PDFGPT"
commandlist = "pdfgpt.PDFGPT:commandList"
lastupdate = "pdfgpt.PDFGPT:lastUpdate"
repository = "pdfgpt.PDFGPT:repository"
ignoreadd = "pdfgpt.PDFGPT:ignoreListADD"
ignoreremove = "pdfgpt.PDFGPT:ignoreListREMOVE"
ignoreshow = "pdfgpt.PDFGPT:ignoreListSHOW"

[project.urls]
Homepage = "https://github.com/SamuelSaylor/PDF-GPT"
Repository = "https://github.com/SamuelSaylor/PDF-GPT"
Issues = "https://github.com/SamuelSaylor/PDF-GPT/issues"